--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [package]
-name = "alloc"
+name = "allocator_collections"
 version = "0.1.0"
 authors = ["The Rust Project Developers", "Philipp Oppermann <dev@phil-opp.com>"]
